# SO2-Projekt

./: CMakeLists.txt  README.md
SO2Threads/: CleaningPersonnel.cpp  CleaningPersonnel.h  Doctor.cpp  Doctor.h  Drug.cpp  Drug.h  Fork.cpp  Fork.h  Nurse.cpp  Nurse.h  OperatingRoom.cpp  OperatingRoom.h  Patient.cpp  Patient.h  Philosopher.cpp  Philosopher.h  SO2Threads.cbp  SO2Threads.depend  main.cpp
